# Warden

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  warden_diagnostic_log.md
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/file_ops/: mod.rs  operations.rs
src-tauri/src/file_system/: mod.rs  models.rs  reader.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/warden_engine/: mod.rs  utils.rs
src-tauri/src/warden_engine/dependency_map/: mod.rs
src-tauri/src/warden_engine/linter/: ast_analyzer.rs  entropy_scanner.rs  mod.rs  rules.rs
src-tauri/warden_engine/: mod.rs
src-tauri/warden_engine/dependency_map/: mod.rs
src-tauri/warden_engine/linter/: mod.rs
src/components/canvas/: EditorWorkspace.tsx  MonacoCanvas.tsx  TabBar.tsx  TabItem.tsx
src/components/canvas/hooks/: useFileLoader.ts  useWardenInterceptor.ts
src/components/error/: ErrorBoundary.tsx
src/components/layout/: StatusBar.tsx  TopMenu.tsx  WorkspaceLayout.tsx
src/components/sidebar-left/: FileExplorer.tsx  FileNodeItem.tsx
src/components/sidebar-left/hooks/: useFileNode.ts
src/components/sidebar-right/: ChatInterface.tsx  ChatMessage.tsx  LinterBoard.tsx  LinterBoard.txs  LinterCardItem.tsx  RightSideBar.tsx
src/components/terminal/: WardenTerminal.tsx
src/core/constants/: theme.ts
src/core/contracts/: ChatSchema.ts  FileTree.ts  IpcBridge.ts  UiSchema.ts  WardenSchema.ts
src/core/state/: chatStore.ts  editorStore.ts  uiStore.ts  wardenStore.ts
src/core/utils/: diagnosticLogger.ts  systemLogger.ts
src/services/llm-api/: LlmOrchestrator.ts
src/services/mock-engine/: MockService.ts  mockSamples.ts
src/services/rust-bridge/: WindowIpc.ts  fileOpsIpc.ts  fileSystemIpc.ts  wardenIpc.ts
src/styles/: warden.css
