[package]
name = "warden-ide"
version = "0.1.0"
description = "A hyper-focused, lightweight IDE acting as a safeguard against tech debt."
authors = ["Warden Development Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Required for the Warden Heuristic Engine (Anti-MVP and Dependency Map)
regex = "1.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
