[package]
name = "warden-ide"
version = "0.1.0"
description = "Warden IDE Backend"
authors = ["Warden Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "window-all", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"

# SPRINT 6: Pseudoterminal integration for native OS shell access
portable-pty = "0.8.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
