[package]
name = "warden-ide"
version = "0.1.0"
description = "Warden IDE Backend"
authors = ["Warden Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "window-all", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"

# Pseudoterminal integration for native OS shell access
portable-pty = "0.8.1"

# Heuristic Engine & AST Parsing Dependencies
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20" 
tree-sitter-cpp = "0.20"
dashmap = "5.5"
ignore = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]